--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -134,6 +134,8 @@
         android:layout_marginTop="24dp"
         android:padding="12dp"
         android:text="@string/sign_up"
+        android:backgroundTint="#B473BD"
+        android:textColorLink="#8E4D96"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />
