--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,8 @@
 
     <item
         android:id="@+id/placeholder"
-        android:title=""
+        android:icon="@drawable/ic_search"
+        android:title="@string/search"
         android:enabled="false" />
 
     <item
