--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -18,9 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_close"
-            app:title="@string/edit_profile"
-            app:titleTextColor="@android:color/black">
+            app:navigationIcon="@drawable/ic_close">
 
             <Button
                 android:id="@+id/btn_save"
